# rust-practise

./: Cargo.toml  README.md
chatroom/: README.md
chatroom/src/: main.rs  package.rs  webserver.rs
file_manager/: Cargo.toml  README.md
file_manager/src/: filemanager.rs  main.rs
file_manager/tests/: sqlx_test.rs
lsp-demo/: Cargo.toml
lsp-demo/src/: main.rs  msg.rs
my-redis/: Cargo.toml
my-redis/examples/: hello-redis.rs
src/: main.rs
src/alg/encode/: base64.rs
src/collection/: list.rs  mod.rs  unsafe_linkist.rs
src/core/: mod.rs  pointer.rs  test_serde.rs  traits.rs  union.rs
src/core/macro/: declarative.rs  mod.rs
src/core/macro/codegen/: Cargo.toml
src/core/macro/codegen/src/: lib.rs
src/data_structure/: mod.rs  safe_linklist.rs  unsafe_linkist.rs
src/demo/: features.rs  lifetime.rs  mod.rs  pointer.rs
src/design_pattern/: mod.rs  singleton.rs
src/gaming/: mod.rs
src/gaming/render/: mod.rs  tests.rs
src/gaming/snake/: app.rs  mod.rs  render.rs  scene.rs  snake.rs
windows_bindings/: Cargo.toml  build.rs
