[package]
name = "practise"
version = "0.1.0"
authors = ["KyanCh <zgy.wiw@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# set default feature
default = ["user_define_feature","feature_with_values","conflict1"]
user_define_feature =[]
feature_with_values = []
conflict1=[]
conflict2=[]

[dependencies]

[target.'cfg(windows)'.dependencies]
windows_bindings = { path= "./windows_bindings"}
windows ={version="0.11.0"}
