[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.5",features = ["runtime-tokio-rustls","postgres"]}
axum = "0.5.7"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0",features = ["full"]}

tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter"]}
dotenv = "0.15"
